force-app/main/default/objects/CampaignMember/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The status of the attendee on the campaign</description>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>