force-app/main/default/objects/CampaignMember/fields/Campaign_Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Dietary_Requirements__c</fullName>
    <description>US-4726 - Special Dietary Requirements of invitee</description>
    <label>Campaign Dietary Requirements</label>
    <length>100</length>
    <type>Text</type>
</CustomField>