force-app/main/default/objects/CampaignMember/fields/Campaign_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Salutation__c</fullName>
    <description>US-4726 - The salutation of the invitee (Mr, Mrs, Dr etc)</description>
    <label>Campaign Salutation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>