force-app/main/default/objects/CampaignMember/fields/Campaign_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Shirt_Size__c</fullName>
    <description>US-4726 - Shirt Size of invitee</description>
    <label>Campaign Shirt Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>