force-app/main/default/objects/CampaignMember/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <label>Campaign Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>