force-app/main/default/objects/CampaignMember/fields/Campaign_Wave__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Wave__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The wave that the campaign member has being invited to the event</description>
    <label>Campaign Wave</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>