force-app/main/default/objects/CampaignMember/fields/Contact_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Contact_Inactive__c</fullName>
    <description>C-00003127 - field used to filter &apos;View All Campaign Members&apos; report</description>
    <formula>Contact.Inactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Inactive</label>
    <type>Checkbox</type>
</CustomField>