force-app/main/default/objects/CampaignMember/fields/Cost_Per_Head__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Head__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The cost breakdown per head including Standard Bank contacts applicable for the campaign</description>
    <formula>Campaign.Cost_Per_Head__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Head</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>