force-app/main/default/objects/CampaignMember/fields/Date_Responded__c.field-meta.xml
<CustomField>
    <fullName>Date_Responded__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The date the invitee responded to the invitation</description>
    <label>Date Responded</label>
    <type>Date</type>
</CustomField>