force-app/main/default/objects/CampaignMember/fields/Deploy_to_Marketing_Cloud_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Deploy_to_Marketing_Cloud_Shadow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-7843: &apos;Deploy to Marketing Cloud Shadow&apos; field</description>
    <label>Deploy to Marketing Cloud Shadow</label>
    <type>Checkbox</type>
</CustomField>