force-app/main/default/objects/CampaignMember/fields/MC_Status__c.field-meta.xml
<CustomField>
    <fullName>MC_Status__c</fullName>
    <label>MC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>