force-app/main/default/objects/CampaignMember/validationRules/Create_Only_For_Active_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Only_For_Active_Contacts</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  Contact.Inactive__c = true</errorConditionFormula>
    <errorMessage>You can only add active contacts to campaign</errorMessage>
</ValidationRule>